# isaric3.0-raps-analytics

./: README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: cd.yml  ci.yml
data/: dados_uti_ems.xlsx
docs/: index.md  inference.md  packages.md  predictive.md  preprocessing.md
src/inference/: core.py  survival_cox.py  utils.py
src/predictive/: linear_log_reg.py  utils.py
src/preprocessing/: core.py
src/raps/inference/: survival_cox.py
src/raps/predictive/: core.py  linear_log_reg.py  logistic_regression.py
src/raps/preprocessing/: core.py  mice.py  utils.py
