[metadata]
name = rapsanalytics
version = 0.1.0
description = Pacote modular para análise preditiva, inferência e pré-processamento
author = Carlos
license = MIT

[options]
packages = find_namespace:
package_dir =
    =src
include_package_data = True
zip_safe = False

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest
    black
    isort
